log

Thu 14 Mar 2024 04:15:06 PM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
b4cd424
Thu 14 Mar 2024 04:22:16 PM UTC: 
 exercises.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
8b35a96
Thu 14 Mar 2024 04:36:28 PM UTC: 
 exercises.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:82:10: error: ‘numPares’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   82 |   return numPares;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e179fb3
Thu 14 Mar 2024 04:42:24 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:82:10: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   82 |   return 3;
      |          ^
exercises.c:70:28: error: ‘numPares’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   70 |         numPares = (int *) realloc(numPares, sizeof(int) * (talla + 1));
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
348fac1
Thu 14 Mar 2024 04:42:46 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:82:10: error: ‘numPares’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   82 |   return numPares;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0fdf264
Thu 14 Mar 2024 04:47:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
550b095
Thu 14 Mar 2024 04:52:39 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
113e870
Thu 14 Mar 2024 04:53:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:82:10: error: ‘numPares’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   82 |   return numPares;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
98cbd77
Thu 14 Mar 2024 04:54:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:63:16: error: expected ‘;’ before ‘int’
   63 |   int *numPares
      |                ^
      |                ;
   64 |   int talla = 0;
      |   ~~~           
exercises.c:70:9: error: ‘numPares’ undeclared (first use in this function)
   70 |         numPares = (int *) realloc(numPares, sizeof(int) * (talla + 1));
      |         ^~~~~~~~
exercises.c:70:9: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:83:1: error: control reaches end of non-void function [-Werror=return-type]
   83 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
80a51ae
Thu 14 Mar 2024 04:54:17 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:82:10: error: ‘numPares’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   82 |   return numPares;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
01f9648
Thu 14 Mar 2024 04:54:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:70:28: error: ‘numPares’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   70 |         numPares = (int *) realloc(numPares, sizeof(int) * (talla + 1));
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
883fbfa
Thu 14 Mar 2024 04:55:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:82:10: error: ‘numPares’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   82 |   return numPares;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b0138a9
Thu 14 Mar 2024 04:57:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:70:9: error: ‘numPares’ undeclared (first use in this function); did you mean ‘numPar’?
   70 |         numPares = (int *) realloc(numPares, sizeof(int) * (talla + 1));
      |         ^~~~~~~~
      |         numPar
exercises.c:70:9: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:63:8: error: unused variable ‘numPar’ [-Werror=unused-variable]
   63 |   int *numPar;
      |        ^~~~~~
exercises.c:83:1: error: control reaches end of non-void function [-Werror=return-type]
   83 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fff655c
Thu 14 Mar 2024 04:57:38 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:82:10: error: ‘numPares’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   82 |   return numPares;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
49efb52
Thu 14 Mar 2024 05:14:29 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:82:10: error: ‘numPars’ undeclared (first use in this function); did you mean ‘numPares’?
   82 |   return numPars;
      |          ^~~~~~~
      |          numPares
exercises.c:82:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:83:1: error: control reaches end of non-void function [-Werror=return-type]
   83 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
218d35c
Thu 14 Mar 2024 05:14:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:82:10: error: ‘numPares’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   82 |   return numPares;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
058d227
Thu 14 Mar 2024 05:16:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
82deb1c
Thu 14 Mar 2024 05:16:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:82:10: error: ‘numares’ undeclared (first use in this function); did you mean ‘numPares’?
   82 |   return numares;
      |          ^~~~~~~
      |          numPares
exercises.c:82:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:83:1: error: control reaches end of non-void function [-Werror=return-type]
   83 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
827f385
Thu 14 Mar 2024 05:16:21 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
fcb1ca3
